--- a/src/app/employee/employee-details/tech-skills/tech-skills.component.scss
+++ b/src/app/employee/employee-details/tech-skills/tech-skills.component.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 80pxS;
+    padding: 50px;
 }
 
 .mat-form-field {
@@ -27,12 +27,6 @@
     justify-content: space-between;
 }
 
-mat-card {
-    margin-top: 30px;
-    height: 67px;
-    border: 1px solid #00000029;
-}
-
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
     display: flex;
     position: absolute;
@@ -50,9 +44,4 @@ mat-card {
 .add, .delete {
     cursor: pointer;
     display: flex;
-}
-
-.experience {
-    display: grid;
-    grid-gap: 20px;
 }
