--- a/src/app/employee/employee-details/address-details/address-details.component.html
+++ b/src/app/employee/employee-details/address-details/address-details.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
     <div class="accordGap">
       <mat-accordion formArrayName="addressArray" *ngFor="let contact of getAddress(); let i = index">
-        <mat-expansion-panel (opened)="panelOpenState = true" [formGroupName]="i">
+        <mat-expansion-panel (opened)="panelOpenState = true" [formGroupName]="i" [expanded]="step === 0">
           <mat-expansion-panel-header>
             <mat-panel-title></mat-panel-title>
             <mat-panel-description></mat-panel-description>
