--- a/src/app/employee/employee-details/address-details/address-details.component.scss
+++ b/src/app/employee/employee-details/address-details/address-details.component.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 80pxS;
+    padding: 50px;
 }
 
 .mat-form-field {
@@ -25,6 +25,11 @@
 .submit {
     display: flex;
     justify-content: space-between;
+}
+
+mat-card {
+    margin-top: 30px;
+    height: 67px;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
