--- a/src/app/employee/employee-details/contact/contact.component.scss
+++ b/src/app/employee/employee-details/contact/contact.component.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 80pxS;
+    padding: 50px;
 }
 
 .mat-form-field {
@@ -30,6 +30,7 @@
 mat-card {
     margin-top: 30px;
     height: 67px;
+    border: 1px solid #00000029;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
@@ -42,11 +43,12 @@ mat-card {
     pointer-events: none;
 }
 
-.mat-form-field+.mat-form-field {
-    margin-left: 8px;
-}
-
 .add, .delete {
     cursor: pointer;
     display: flex;
+}
+
+.contact {
+    display: grid;
+    grid-gap: 20px;
 }
