--- a/src/app/employee/employee-details/education-details/education-details.component.html
+++ b/src/app/employee/employee-details/education-details/education-details.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="educationForm" (ngSubmit)="onSubmit()">
     <div class="accordGap">
       <mat-accordion formArrayName="educationArray" *ngFor="let contact of getEduDetails(); let i = index">
-        <mat-expansion-panel (opened)="panelOpenState = true" [formGroupName]="i">
+        <mat-expansion-panel (opened)="panelOpenState = true" [formGroupName]="i" [expanded]="step === 0">
           <mat-expansion-panel-header>
             <mat-panel-title></mat-panel-title>
             <mat-panel-description></mat-panel-description>
