--- a/src/app/employee/employee-details/experience/experience.component.scss
+++ b/src/app/employee/employee-details/experience/experience.component.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 80pxS;
+    padding: 50px;
 }
 
 .mat-form-field {
@@ -27,6 +27,12 @@
     justify-content: space-between;
 }
 
+mat-card {
+    margin-top: 30px;
+    height: 67px;
+    border: 1px solid #00000029;
+}
+
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
     display: flex;
     position: absolute;
@@ -44,4 +50,9 @@
 .add, .delete {
     cursor: pointer;
     display: flex;
+}
+
+.experience {
+    display: grid;
+    grid-gap: 20px;
 }
