--- a/src/app/employee/employee-details/tech-skills/tech-skills.component.html
+++ b/src/app/employee/employee-details/tech-skills/tech-skills.component.html
@@ -1,26 +1,34 @@
 <div class="container">
-  <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="skillsForm" (ngSubmit)="onSubmit()">
     <div class="accordGap">
-      <mat-accordion formArrayName="contactsArray" *ngFor="let contact of getContact(); let i = index">
-        <mat-expansion-panel (opened)="panelOpenState = true" [formGroupName]="i">
+      <mat-accordion formArrayName="skillsArray" *ngFor="let contact of getSkills(); let i = index">
+        <mat-expansion-panel (opened)="panelOpenState = true" [formGroupName]="i" [expanded]="step === 0">
           <mat-expansion-panel-header>
             <mat-panel-title></mat-panel-title>
             <mat-panel-description></mat-panel-description>
           </mat-expansion-panel-header>
           <div class="row">
             <div class="col-md-6">
-              <mat-label class="d-block">Contact Type</mat-label>
+              <mat-label class="d-block">Skill Type</mat-label>
               <mat-form-field appearance="outline">
-                <mat-select formControlName="contactType" required>
-                  <mat-option value="option1">Married</mat-option>
-                  <mat-option value="option2">Unmarried</mat-option>
-                </mat-select>
+                <input matInput class="matInput" formControlName="skillType" required>
               </mat-form-field>
             </div>
             <div class="col-md-6">
-              <mat-label class="d-block">Contact Number</mat-label>
+              <mat-label class="d-block">Skill Rating</mat-label>
               <mat-form-field appearance="outline">
-                <input matInput class="matInput" formControlName="contactNumber" required>
+                <input matInput class="matInput" formControlName="rating" required>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <mat-label class="d-block">Year of Experience (over skill)</mat-label>
+              <mat-form-field appearance="outline">
+                <mat-select formControlName="experience" required>
+                  <mat-option value="option1">Married</mat-option>
+                  <mat-option value="option2">Unmarried</mat-option>
+                </mat-select>
               </mat-form-field>
             </div>
           </div>
@@ -42,7 +50,7 @@
   <mat-card class="submission">
     <div class="submit">
       <button mat-raised-button class="previous">Previous</button>
-      <button mat-raised-button class="next" [disabled]="contactForm.invalid">Submit</button>
+      <button mat-raised-button class="next" [disabled]="skillsForm.invalid">Next</button>
     </div>
   </mat-card>
 
