--- a/src/app/employee/dashboard/profile/profile.component.html
+++ b/src/app/employee/dashboard/profile/profile.component.html
@@ -1,1 +1,314 @@
-<p>profile works!</p>
+<div class="container-fluid">
+  <mat-card>
+    <div class="details">
+      <div class="primary">
+        <div class="primary-info">
+          <h1>Primary Info</h1>
+          <span class="material-symbols-outlined">edit</span>
+        </div>
+        <div class="gap">
+          <div class="row">
+            <div class="col-md-3">
+              <span>Employee ID:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+            <div class="col-md-3">
+              <span>Employee Name:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+            <div class="col-md-3">
+              <span>Date of Joining:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+            <div class="col-md-3">
+              <span>Date of Birth:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <span>Salary:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+            <div class="col-md-3">
+              <span>Blood Group:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+            <div class="col-md-3">
+              <span>Designation:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+            <div class="col-md-3">
+              <span>Gender:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <span>Nationality:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+            <div class="col-md-3">
+              <span>Employee Status:</span>&nbsp;&nbsp;
+              <span>123</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+      <div class="secondary">
+        <div class="secondary-info">
+          <h1>Secondary Info</h1>
+          <div class="gap">
+            <div class="row">
+              <div class="col-md-3">
+                <span>PAN No:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Aadhaar No:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Father Name:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Mother Name:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <span>Spouse Name</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Passport No:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Marital Status:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+      <div class="education">
+        <div class="education-info">
+          <h1>Education Details</h1>
+          <div class="gap">
+            <div class="row">
+              <div class="col-md-3">
+                <span>Education Type:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Year of Passing:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Percentage (%):</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>University Name:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <span>Institue Name:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Specialization</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>State:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+      <div class="address">
+        <div class="address-info">
+          <h1>Address Details</h1>
+          <div class="gap">
+            <div class="row">
+              <div class="col-md-3">
+                <span>Address Type:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Door No:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Street:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Locality:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <span>City:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>State</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>PIN Code:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Land Mark:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+      <div class="bank">
+        <div class="bank-info">
+          <h1>Bank Details</h1>
+          <div class="gap">
+            <div class="row">
+              <div class="col-md-3">
+                <span>Account No:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Bank Name:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Bank Type:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>IFSC Code:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <span>Branch:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>State</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+      <div class="skills">
+        <div class="skills-info">
+          <h1>Technical Skills</h1>
+          <div class="gap">
+            <div class="row">
+              <div class="col-md-3">
+                <span>Skill Type:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Skill Rating:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Year of Experience (over skill):</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+      <div class="experience">
+        <div class="experience-info">
+          <h1>Experience</h1>
+          <div class="gap">
+            <div class="row">
+              <div class="col-md-3">
+                <span>Date of Joining:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Year of Experience:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Company Name:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Designation:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+      <div class="contact">
+        <div class="contact-info">
+          <h1>Contact</h1>
+          <div class="gap">
+            <div class="row">
+              <div class="col-md-3">
+                <span>Contact Type:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+              <div class="col-md-3">
+                <span>Contact No:</span>&nbsp;&nbsp;
+                <span>123</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="submit">
+        <button mat-raised-button class="next" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit</button>
+      </div>
+    </div>
+  </mat-card>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <h2>Record Updated Successfully</h2>
+        <div class="ok">
+          <button mat-raised-button class="next" data-bs-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
