--- a/src/app/employee/dashboard/dashboard.component.html
+++ b/src/app/employee/dashboard/dashboard.component.html
@@ -12,7 +12,19 @@
         <input class="search form-control me-2" type="search" placeholder="Search Mentor/Employee"
           aria-label="Search" />
       </form>
-      <button mat-button type="button" class="logout">Logout</button>
+      <div class="profile">
+        <mat-form-field appearance="outline">
+          <div class="user">
+          <img src="/assets/images/add-user (2).png" alt="...">
+          <span class="name">Name</span>
+        </div>
+          <select matNativeControl required>
+            <option value="Profile">Profile</option>
+            <option value="Change Password">Change Password</option>
+            <option value="Logout">Logout</option>
+          </select>
+        </mat-form-field>
+      </div>
     </div>
   </div>
 </nav>
