--- a/src/app/employee/employee-details/address-details/address-details.component.html
+++ b/src/app/employee/employee-details/address-details/address-details.component.html
@@ -89,8 +89,8 @@
 
   <mat-card class="submission">
     <div class="submit">
-      <button mat-raised-button class="previous">Previous</button>
-      <button mat-raised-button class="next" [disabled]="addressForm.invalid">Next</button>
+      <button mat-raised-button class="previous" routerLink="education">Previous</button>
+      <button mat-raised-button class="next" [disabled]="addressForm.invalid" routerLink="bank">Next</button>
     </div>
   </mat-card>
 
