--- a/src/app/employee/employee-details/bank-details/bank-details.component.html
+++ b/src/app/employee/employee-details/bank-details/bank-details.component.html
@@ -55,8 +55,8 @@
 
   <mat-card class="submission">
     <div class="submit">
-      <button mat-raised-button class="previous">Previous</button>
-      <button mat-raised-button class="next" [disabled]="bankForm.invalid">Next</button>
+      <button mat-raised-button class="previous" routerLink="address">Previous</button>
+      <button mat-raised-button class="next" [disabled]="bankForm.invalid" routerLink="skills">Next</button>
     </div>
   </mat-card>
 
