--- a/src/app/employee/employee-details/secondary-info/secondary-info.component.html
+++ b/src/app/employee/employee-details/secondary-info/secondary-info.component.html
@@ -57,8 +57,8 @@
 
   <mat-card>
     <div class="submit">
-      <button mat-raised-button class="previous">Previous</button>
-      <button mat-raised-button class="next" [disabled]="secondaryForm.invalid">Next</button>
+      <button mat-raised-button class="previous" routerLink="primary">Previous</button>
+      <button mat-raised-button class="next" [disabled]="secondaryForm.invalid" routerLink="education">Next</button>
     </div>
   </mat-card>
 
