--- a/src/app/employee/employee-details/tech-skills/tech-skills.component.html
+++ b/src/app/employee/employee-details/tech-skills/tech-skills.component.html
@@ -49,8 +49,8 @@
 
   <mat-card class="submission">
     <div class="submit">
-      <button mat-raised-button class="previous">Previous</button>
-      <button mat-raised-button class="next" [disabled]="skillsForm.invalid">Next</button>
+      <button mat-raised-button class="previous" routerLink="bank">Previous</button>
+      <button mat-raised-button class="next" [disabled]="skillsForm.invalid" routerLink="experience">Next</button>
     </div>
   </mat-card>
 
