--- a/src/app/employee/employee-details/education-details/education-details.component.html
+++ b/src/app/employee/employee-details/education-details/education-details.component.html
@@ -81,8 +81,8 @@
 
   <mat-card class="submission">
     <div class="submit">
-      <button mat-raised-button class="previous">Previous</button>
-      <button mat-raised-button class="next" [disabled]="educationForm.invalid">Next</button>
+      <button mat-raised-button class="previous" routerLink="secondary">Previous</button>
+      <button mat-raised-button class="next" [disabled]="educationForm.invalid" routerLink="address">Next</button>
     </div>
   </mat-card>
 
