--- a/src/app/employee/employee-details/employee-details.component.html
+++ b/src/app/employee/employee-details/employee-details.component.html
@@ -3,4 +3,21 @@
     [class.active]="rla.isActive">{{link.label}}
   </a>
 </nav>
+
+<!-- 
+<mat-tab-group>
+  <mat-tab *ngFor="let tab of asyncTabs | async" [routerLink]="tab.route" routerLinkActive #rla="routerLinkActive"
+  [class.active]="rla.isActive">
+  <ng-template mat-tab-label>{{tab.label}}</ng-template>
+  {{tab.route}}
+</mat-tab>
+</mat-tab-group> -->
+
+<mat-tab-group mat-tab-link *ngFor="let link of links" [routerLink]="link.route" routerLinkActive #rla="routerLinkActive"
+[class.active]="rla.isActive">{{link.label}}
+  <!-- <mat-tab label="First"> Content 1 </mat-tab>
+  <mat-tab label="Second"> Content 2 </mat-tab>
+  <mat-tab label="Third"> Content 3 </mat-tab> -->
+</mat-tab-group>
+
 <router-outlet></router-outlet>
