--- a/src/app/employee/employee-details/employee-details.component.scss
+++ b/src/app/employee/employee-details/employee-details.component.scss
@@ -10,5 +10,21 @@
     align-items: center;
     white-space: nowrap;
     font-family: system-ui;
-    font-size: 18px;
+}
+
+.mat-tab-link {
+    color: #086288;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.mat-tab-label {
+    font-size: 10px !important;
+    .mat-tab-link .hover{
+        color: #086288;
+        font-family: Roboto, "Helvetica Neue", sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+    }
 }
