--- a/src/app/employee/employee-details/primary-info/primary-info.component.html
+++ b/src/app/employee/employee-details/primary-info/primary-info.component.html
@@ -82,7 +82,7 @@
 
   <mat-card class="submission">
     <div class="submit">
-      <button mat-raised-button class="next" [disabled]="primaryForm.invalid">Next</button>
+      <button mat-raised-button class="next" [disabled]="primaryForm.invalid" routerLink="secondary">Next</button>
     </div>
   </mat-card>
 
