--- a/src/app/employee/employee-details/experience/experience.component.html
+++ b/src/app/employee/employee-details/experience/experience.component.html
@@ -71,8 +71,8 @@
 
   <mat-card class="submission">
     <div class="submit">
-      <button mat-raised-button class="previous" routerLink="skills">Previous</button>
-      <button mat-raised-button class="next" [disabled]="experienceForm.invalid" routerLink="contact">Next</button>
+      <button mat-raised-button class="previous" routerLink="../skills">Previous</button>
+      <button mat-raised-button class="next" [disabled]="experienceForm.invalid" routerLink="../contact">Next</button>
     </div>
   </mat-card>
 
