--- a/src/app/mentor/batch-dialog/batch-dialog.component.html
+++ b/src/app/mentor/batch-dialog/batch-dialog.component.html
@@ -15,8 +15,16 @@
         <td>Mark</td>
         <td>Otto</td>
         <td class="action">
-          <mat-checkbox class="morning example-margin"></mat-checkbox>
-          <mat-checkbox class="afternoon example-margin"></mat-checkbox>
+          <div class="currentDiagnosisSwitch1">
+            <label class="currentDiagnosisToggle">
+              <input type="checkbox"/>
+              <div class="slider round">
+                <span class="on"></span> <span class="off"></span>
+              </div>
+            </label>
+          </div>
+          <!-- <mat-checkbox class="morning example-margin"></mat-checkbox>
+          <mat-checkbox class="afternoon example-margin"></mat-checkbox> -->
         </td>
       </tr>
     </tbody>
