--- a/src/app/mentor/batch/batch.component.html
+++ b/src/app/mentor/batch/batch.component.html
@@ -49,7 +49,7 @@
           <td class="action">
             <button mat-button (click)="openDialog()">Attendance</button>
           </td>
-          <td><span class="material-symbols-outlined" (click)="rating()">chevron_right</span></td>
+          <td><span class="material-symbols-outlined"routerLink="emp-list">chevron_right</span></td>
         </tr>
       </tbody>
     </table>
