--- a/src/app/mentor/mentor.component.html
+++ b/src/app/mentor/mentor.component.html
@@ -13,7 +13,7 @@
             aria-label="Search" />
         </form>
         <div class="profile">
-          <mat-form-field appearance="outline">
+          <mat-form-field appearance="outline" class="mentor">
             <div class="user">
             <img src="/assets/images/add-user (2).png" alt="...">
             <span class="name">Name</span>
