--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,3 +77,7 @@ mat-card {
 .modal-backdrop {
     z-index: 0 !important;
 }
+
+.mat-form-field-appearance-outline .mat-form-field-outline {
+    color: #707070;
+}
