--- a/src/app/mentor/batch-dialog/batch-dialog.component.html
+++ b/src/app/mentor/batch-dialog/batch-dialog.component.html
@@ -23,6 +23,14 @@
               </div>
             </label>
           </div>
+          <div class="currentDiagnosisSwitch1">
+            <label class="currentDiagnosisToggle2">
+              <input type="checkbox"/>
+              <div class="slider round">
+                <span class="on"></span> <span class="off"></span>
+              </div>
+            </label>
+          </div>
           <!-- <mat-checkbox class="morning example-margin"></mat-checkbox>
           <mat-checkbox class="afternoon example-margin"></mat-checkbox> -->
         </td>
