--- a/src/app/mentor/emp-list/emp-list.component.html
+++ b/src/app/mentor/emp-list/emp-list.component.html
@@ -49,7 +49,7 @@
         <td class="action">
           <button mat-button>Give Rating</button>
         </td>
-        <td><span class="material-symbols-outlined" routerLink="emp-list">chevron_right</span></td>
+        <td><span class="material-symbols-outlined" style="cursor: pointer;">chevron_right</span></td>
       </tr>
     </tbody>
   </table>
