--- a/src/app/employee/employee-details/employee-details.component.html
+++ b/src/app/employee/employee-details/employee-details.component.html
@@ -13,7 +13,7 @@
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
     <a routerLink="bank" routerLinkActive="active">Bank Details
-      <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
+      <hr style="height:5px;color:#FAA81D;background-color:#FAA81D; border: 1px solid #FAA81D;">
     </a>
     <a routerLink="skills" routerLinkActive="active">Technical Skills
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
