--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,7 +9,8 @@
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input class="search form-control me-2" type="search" placeholder="Search Mentor/Employee" aria-label="Search" />
+        <input class="search form-control me-2" type="search" placeholder="Search Mentor/Employee"
+          aria-label="Search" />
       </form>
       <button mat-button type="button" class="logout">Logout</button>
     </div>
@@ -18,18 +19,24 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidenav">
-    <button mat-button class="matt-button p-0" routerLink="batch" [routerLinkActive]="['active']">
-      <img src="/assets/images/Batch.png" alt="" />
+
+    <div class="btnBatch">
+      <button mat-raised-button class="batch" routerLink="batch" [routerLinkActive]="['active']">
+      </button>
       <small>Batch</small>
-    </button>
-    <button mat-button class="mat-button p-0" routerLink="mentor" [routerLinkActive]="['active']">
-      <img src="/assets/images/team.png" alt="" />
+    </div>
+
+    <div class="btnMentor">
+      <button mat-raised-button class="mentor" routerLink="mentor" [routerLinkActive]="['active']">
+      </button>
       <small>Mentor</small>
-    </button>
-    <button mat-button class="mat-button p-0" routerLink="request" [routerLinkActive]="['active']">
-      <img src="/assets/images/add-user (2).png" alt="" />
+    </div>
+
+    <div class="btnRequest">
+      <button mat-raised-button class="request" routerLink="request" [routerLinkActive]="['active']">
+      </button>
       <small>Request</small>
-    </button>
+    </div>
   </mat-drawer>
 
   <mat-drawer-content>
