--- a/src/app/admin/request/request.component.html
+++ b/src/app/admin/request/request.component.html
@@ -5,14 +5,13 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="#" style="color: #FAA81D;">
-                <b>Batch List</b>
+                <b>Request List</b>
               </a>
             </li>
           </ul>
           <form class="d-flex" role="search">
             <input class="searchBatch form-control me-2" type="search" placeholder="Search Mentor/Employee" aria-label="Search" />
           </form>
-          <button mat-button type="button" class="newBatch" (click)="openDialog()">New Mentor</button>
         </div>
       </div>
     </nav>
@@ -23,14 +22,13 @@
             <mat-checkbox class="example-margin"></mat-checkbox>
           </td>
           <th scope="col">No</th>
-          <th scope="col">Batch ID</th>
-          <th scope="col">Batch Name</th>
-          <th scope="col">Mentor Name</th>
-          <th scope="col">Technologies</th>
-          <th scope="col">Start Date</th>
-          <th scope="col">End Date</th>
-          <th scope="col">Status</th>
-          <th scope="col">Action</th>
+          <th scope="col">Employee ID</th>
+          <th scope="col">Employee Name</th>
+          <th scope="col">YOP</th>
+          <th scope="col">Percentage</th>
+          <th scope="col">Experience</th>
+          <th scope="col">Contact No.</th>
+          <th scope="col" class="action">Action</th>
         </tr>
       </thead>
       <tbody>
@@ -44,13 +42,19 @@
           <td>@mdo</td>
           <td>Mark</td>
           <td>Otto</td>
-          <td>@mdo</td>
-          <td>Mark</td>
+          <td>7894561320</td>
           <td class="action">
-            <span class="material-symbols-outlined"> delete</span>
-            <span class="material-symbols-outlined">edit</span>
+            <button mat-raised-button type="button" class="approve" (click)="approve()" routerLink="../approve">
+                <span>Approve</span>
+            </button>
+            <button mat-raised-button type="button" class="reject" (click)="reject()">
+                <span>Reject</span>
+            </button>
+            <!-- <span class="material-symbols-outlined"> delete</span>
+            <span class="material-symbols-outlined">edit</span> -->
           </td>
         </tr>
       </tbody>
     </table>
   </div>
+  
