--- a/src/app/employee/dashboard/mock/mock.component.html
+++ b/src/app/employee/dashboard/mock/mock.component.html
@@ -1,34 +1,30 @@
 <div class="container-fluid">
 
   <mat-card>
-    <div class="row py-15">
-      <div class="col-md-3">
-        <form action="/action_page.php">
-          <fieldset>
-            <legend>Attendance</legend>
-            <div class="count">
+    <div class="row">
 
-            </div>
-          </fieldset>
-        </form>
+      <div class="col-md-3">
+        <div class="attendance px-2">
+          <label>
+            <h3>Attendance</h3>
+          </label>
+          <p class="marks"></p>
+          <div class="timing">
+            <p class="morning">Morning</p>
+            <p class="noon">Noon</p>
+          </div>
+        </div>
       </div>
+
       <div class="col-md-8">
-        <form action="/action_page.php">
-          <fieldset>
-            <legend>Mock Ratings</legend>
-            <div class="rating">
-              <canvas id="demo"></canvas>
-              <div class="row">
-                <div class="col-md-5"></div>
-                <div class="col-md-5 mocks">
-                  <div class="mock"><p>Mock</p></div>
-                  <div class="remock"><p>Remock</p></div>
-                  <div class="col-md-2"></div>
-                </div>
-              </div>
-            </div>
-          </fieldset>
-        </form>
+        <div class="rating px-2">
+          <label>
+            <h3>Mock Ratings</h3>
+          </label>
+          <div class="graph">
+            <canvas id="demo"></canvas>
+          </div>
+        </div>
       </div>
     </div>
   </mat-card>
