--- a/src/app/employee/dashboard/mock/mock.component.scss
+++ b/src/app/employee/dashboard/mock/mock.component.scss
@@ -5,12 +5,6 @@
     border-radius: 15px;
 }
 
-.rating {
-    border: 1px solid #00000014;
-    width: 100%;
-    border-radius: 15px;
-    padding: 15px;
-}
 
 mat-card {
     margin-top: 25px;
@@ -43,4 +37,15 @@ mat-card {
     display: flex;
     justify-content: space-between;
     position: relative;
+}
+
+.attendance, .rating {
+    border: 1px solid #00000024;
+    border-radius: 8px;
+    label {
+        position: relative;
+        bottom: 12px;
+        left: 25px;
+        background:white
+    }
 }
