--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -40,10 +40,12 @@
   </mat-drawer>
 
   <mat-drawer-content>
-    <div class="home">
-      <h4>Home</h4>
+    <div class="content">
+      <h4 class="home">Home</h4>
       <span class="material-symbols-outlined">chevron_right</span>
-      <h4>Batch</h4>
+      <h4 class="items">
+        {{item}}
+      </h4>
     </div>
 
     <router-outlet></router-outlet>
