--- a/src/app/admin/batch-dialog/batch-dialog.component.scss
+++ b/src/app/admin/batch-dialog/batch-dialog.component.scss
@@ -1,6 +1,9 @@
 ::ng-deep .mat-dialog-container {
     width: 40%;
     margin: auto;
+    display: block;
+    padding: 15px;
+    border-radius: 15px;
 }
 
 mat-form-field {
@@ -20,6 +23,7 @@ mat-form-field {
     opacity: 0;
     transition: opacity 100ms cubic-bezier(0.25, 0.8, 0.25, 1);
     height: 40px !important;
+    color: #707070 !important;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
@@ -28,6 +32,7 @@ mat-form-field {
 
 .mat-form-field-appearance-outline .mat-form-field-wrapper {
     margin: 0.25em 0;
+    color: #707070;
 }
 
 .mat-dialog-content {
@@ -37,4 +42,8 @@ mat-form-field {
     max-height: 65vh;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
+}
+
+hr {
+    color: #DCDCDC;
 }
